--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="build/win/XR Game Jam September.exe"
+export_path="build/win/Trenchline.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -27,7 +27,7 @@ binary_format/embed_pck=false
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
 binary_format/architecture="x86_64"
-codesign/enable=false
+codesign/enable=true
 codesign/timestamp=true
 codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
